# demo-geocontext

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agent.py  db.py  debug_messages.py  debug_thread_ids.py  demo_cli.py  demo_gradio.py  demo_langraph-1.py  demo_langraph-2.py  docker-compose.yaml  main.py  pyproject.toml  stats.py  tools.py
.github/workflows/: docker-publish.yml
app/: __init__.py  agent.py  auth.py  cli.py  config.py  db.py  demo_cli.py  demo_gradio.py  models.py  server.py  tools.py
app/helpers/: gradio.py
app/services/: __init__.py  agent.py  auth.py  db.py  mcp_client.py
assets/: gradio.css
charts/demo-geocontext/: Chart.yaml  README.md  values.yaml
charts/demo-geocontext/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/demo-geocontext/templates/tests/: test-connection.yaml
core/: chat_room.py
docs/: sample-mcp-servers.json
front/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
front/src/: demo-geocontext.css  helpers.ts  main.ts  ol-simple-map.ts
pages/: mentions-legales.md
tests/: test_agent_tool_errors.py  test_helpers_gradio.py  test_mcp_client.py  test_service_auth.py  test_service_db_health.py
