[project]
name = "demo-geocontext"
version = "0.1.0"
description = "Interactive demo for ignfab/geocontext"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.117.1",
    "gradio>=5.47.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-redis>=0.1.1",
    "uvicorn>=0.37.0",
]
[dependency-groups]
dev = [
  "langchain-ollama"
]
