[project]
name = "demo-geocontext"
version = "0.1.0"
description = "Interactive demo for ignfab/geocontext"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.0",
    "gradio>=6.12.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph>=1.1.6",
    "psycopg[binary,pool]>=3.3.3",
    "uvicorn>=0.44.0",
    "langchain-mcp-adapters>=0.2.2",
]
[dependency-groups]
dev = [
  "langchain-ollama>=1.1.0",
  "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
